<resources>
    <string name="app_name">厨房日记</string>
    <string name="countdown_code_send_succeed">验证码已发送，请注意查收</string>
    <string name="two_password_input_error">两次密码输入不一致，请重新输入</string>
    <string name="phone_input_error">手机号输入不正确</string>
    <string name="home_exit_hint">再按一次退出</string>
    <string name="home_nav_index">厨房社区</string>
    <string name="home_nav_helper">蒸烤助手</string>
    <string name="home_nav_found">发现</string>
    <string name="home_nav_me">我的</string>
    <string name="login_phone_input_hint">账号</string>
    <string name="login_password_input_hint">密码</string>
    <string name="login_forget">忘记密码</string>
    <string name="login_remenber">记住密码</string>
    <string name="login_text">登录</string>
    <string name="submit_text">提交</string>
    <string name="register_text">注册</string>
    <string name="register_hint">手机号仅用于登录和保护账号安全</string>
    <string name="register_login">登录</string>
    <string name="register_phone_input_hint">输入手机号码</string>
    <string name="register_code_input_hint">输入验证码</string>
    <string name="register_send_code">发送验证码</string>
    <string name="register_password_input_hint1">设置密码</string>
    <string name="register_password_input_hint2">再次输入密码</string>
    <string name="about_text">关于厨房日记</string>
    <string name="code_manager">二维码管理</string>
    <string name="mobile_num">手机号</string>
    <string name="setting">设置</string>
    <string name="personal_data">个人中心</string>
    <string name="message_notice">消息通知</string>
    <string name="keyboard_sound">键盘音效</string>
    <string name="modify_pass">修改密码</string>
    <string name="logout_text">退出登录</string>
    <string name="head_image">头像</string>
    <string name="store_name">商户名</string>
    <string name="account">账号</string>
    <string name="contact">联系人</string>
    <string name="title_activity_scan_qr_code">扫一扫</string>
    <string name="qc_code_close">关闭</string>
    <string name="qr_code_select_picture">照片</string>
    <string name="qr_code_open_flash_light">轻触照亮</string>
    <string name="qr_code_close_flash_light">轻触关闭</string>
    <string name="qr_code_auto_scan_notification">将二维码放入框内，即可自动扫描</string>
    <string name="qr_code_notification">提示</string>
    <string name="qr_code_camera_not_open">您的相机功能好像没有打开哦~去\"设置>隐私>相机\"设置一下吧</string>
    <string name="qr_code_positive_button_know">知道了</string>
    <string name="qr_code_positive_button_confirm">确认</string>
    <string name="qr_code_could_not_read_qr_code_from_picture">没有读出图片中的链接，换张图片试试吧~</string>
    <string name="qr_code_could_not_read_qr_code_from_scanner">对不起，无法打开扫出的内容</string>
    <string name="qr_code_camera_not_found">未检测到相机</string>
    <string name="title">请选择时间</string>
    <string name="confirm">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="second">秒</string>
    <string name="cannal_text">取消</string>
    <string name="push_data_empty">暂无数据</string>
    <string name="share">分享</string>
    <string name="tip_exit">再按一次退出程序</string>
    <string name="login_code_checking">正在验证</string>
    <string name="check_fail">验证失败</string>
    <string name="net_error">网络不给力</string>
    <string name="register_failed">注册失败</string>
    <string name="change_failed">修改失败</string>
    <string name="login_retry">重新发送(%d)</string>
    <string name="check_code_error">发送太频繁, 请一分钟后再试</string>
    <string name="tip_policy">登录注册即代表同意用户协议和隐私政策</string>
    <string name="login_resend_code">重新发送</string>
    <string name="home">智能厨房</string>
    <string name="community">厨房社区</string>
    <string name="acp">烹饪程序</string>
    <string name="recipe">蒸烤助手</string>
    <string name="own">我的</string>
    <string name="say_tip">你此刻想说些什么...</string>
    <string name="http_link">在这里粘贴文章链接http://</string>
    <string name="tab">标签</string>
    <string name="device_connect">连接设备</string>
    <string name="tab_success">标签生成成功</string>
    <string name="advice_article">推荐一篇</string>
    <string name="connect_recipe">关联菜谱</string>
    <string name="kitchen_diary">厨房日记</string>
    <string name="community_main">首页</string>
    <string name="community_find">发现</string>
    <string name="community_care">关注</string>
    <string name="check_network">请检查网络连接</string>
    <string name="check_network_dialog">当前网络不可用\n请检查网络设置</string>
    <string name="common_confirm">确定</string>
    <string name="common_cancel">取消</string>
    <string name="common_ignore">忽略</string>
    <string name="common_unknown">未知</string>
    <string name="btn_confirm">确认</string>
    <string name="common_search">搜索</string>
    <string name="appid">58743d95</string>
    <string name="login">正在登录...</string>
    <string name="register">正在注册...</string>
    <string name="password_changing">正在修改密码...</string>
    <string name="password_error">密码错误</string>
    <string name="login_tip">点击启用微信登录</string>
    <string name="login_overtime">登录已过期, 请重新登录</string>
    <string name="login_failed">登录失败</string>
    <string name="login_cancel">发送取消</string>
    <string name="login_refuse">发送被拒绝</string>
    <string name="login_back">发送返回</string>
    <string name="login_requesting">正在请求...</string>
    <string name="login_error">您还未安装微信客户端！</string>
    <string name="login_phone">输入手机号码</string>
    <string name="login_email">邮箱登录</string>
    <string name="login_code">验证码</string>
    <string name="login_btn">登录</string>
    <string name="login_wechat">微信登录</string>
    <string name="login_other">其他登录方式</string>
    <string name="login_account">账号</string>
    <string name="login_password">密码</string>
    <string name="login_password_input">输入密码</string>
    <string name="login_password_hint">6-18位密码, 仅支持字母和数字</string>
    <string name="password_digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="login_register">注册</string>
    <string name="login_register_title">账号注册</string>
    <string name="login_submit">提交</string>
    <string name="login_change_password">密码修改</string>
    <string name="register_success">注册成功</string>
    <string name="register_exist">该账号已注册</string>
    <string name="change_success">修改成功</string>
    <string name="account_error">该账号不存在</string>
    <string name="login_type_phone">手机登录</string>
    <string name="login_phone_register">手机注册</string>
    <string name="login_email_register">邮箱注册</string>
    <string name="login_type_password">密码登录</string>
    <string name="login_type_phone_tip">未注册用户验证后直接登录</string>
    <string name="login_input_checkcode">输入验证码</string>
    <string name="login_input_email">输入邮箱地址</string>
    <string name="login_input_new_pwd">输入新密码</string>
    <string name="login_input_confirm_pwd">确认新密码</string>
    <string name="login_set_pwd">设置密码</string>
    <string name="login_confirm_pwd">确认密码</string>
    <string name="login_find_pwd">找回密码</string>
    <string name="login_set_new_pwd">新密码</string>
    <string name="login_pwd_error">两次输入密码不一致</string>
    <string name="acp_search">搜索烹饪程序/频道</string>
    <string name="search_hot">热门搜索</string>
    <string name="search_history">历史搜索</string>
    <string name="search_acp">最近使用的ACP</string>
    <string name="search_food">扫食材</string>
    <string name="search_recipe">搜索智能菜谱</string>
    <string name="search_publish">发布你的第一篇菜谱</string>
    <string name="bind_recipe">绑定菜谱</string>
    <string name="wel_skip">跳过广告</string>
    <string name="publish_recipe">菜谱</string>
    <string name="publish">发布</string>
    <string name="publish_introduce">下面, 请隆重介绍你的美食~</string>
    <string name="publish_share">写下你分享的理由吧</string>
    <string name="publish_link">在这里黏贴文章链接http://</string>
    <string name="publish_recipe_hint">记录我与美食的点滴...</string>
    <string name="public_content_tip">请您填写需要发表的内容</string>
    <string name="public_content_url">请您填写合法的url地址</string>
    <string name="article_link">在这里黏贴文章链接http://</string>
    <string name="you_can_ask_me">你可以这样问我:</string>
    <string name="recipe_collect_tip">输入:食材,菜名...</string>
    <string name="query">查询</string>
    <string name="recipe_food_tip">按住话筒开始说:食材、菜名</string>
    <string name="recipe_input">请输入您要查询的内容</string>
    <string name="recipe_recommend">今日%s推荐:</string>
    <string name="recipe_period_breakfast">早餐</string>
    <string name="recipe_period_lunch">午餐</string>
    <string name="recipe_period_afternoon">下午茶</string>
    <string name="recipe_period_supper">晚餐</string>
    <string name="recipe_period_midnight">夜宵</string>
    <string name="voice_error">初始化失败,错误码：</string>
    <string name="voice_start">开始说话</string>
    <string name="voice_recognizing">正在识别</string>
    <string name="voice_recognize_error">识别结果不正确。</string>
    <string name="voice_none">你好像什么话也没有说哦</string>
    <string name="voice_eg_bake">烘焙</string>
    <string name="voice_eg_soup">菠菜猪肝汤</string>
    <string name="voice_eg_bread">菠萝包</string>
    <string name="voice_eg_cake">戚风蛋糕</string>
    <string name="voice_eg_western">西餐</string>
    <string name="voice_eg_pizza">披萨</string>
    <string name="voice_eg_vegetables">青菜</string>
    <string name="voice_eg_beef">牛肉</string>
    <string name="voice_eg_mushroom">金针菇</string>
    <string name="voice_eg_crucian">鲫鱼豆腐汤</string>
    <string name="voice_eg_nougat">牛轧糖</string>
    <string name="voice_eg_wings">烤翅</string>
    <string name="voice_eg_cream">奶油</string>
    <string name="voice_eg_puff">泡芙</string>
    <string name="voice_eg_pie">苹果派</string>
    <string name="voice_eg_pudding">布丁</string>
    <string name="diary_publishing">正在发布日记...</string>
    <string name="diary_hide">隐藏</string>
    <string name="advice">意见反馈</string>
    <string name="check_update">检查更新</string>
    <string name="diary">日记</string>
    <string name="diary_publish">上传作品</string>
    <string name="recipe_publish">"菜谱发布"</string>
    <string name="diary_detail">日记详情</string>
    <string name="main_page">达人主页</string>
    <string name="kitchen_vote">厨房票选</string>
    <string name="article_collect">精选合集</string>
    <string name="master_top">达人排行榜</string>
    <string name="hot_search">热门搜索</string>
    <string name="family_food">家常菜</string>
    <string name="body_food">食疗养生</string>
    <string name="share_title">分享</string>
    <string name="vote_goods">票选商品</string>
    <string name="collect_recipe">菜谱收藏</string>
    <string name="collect_diary">日记收藏</string>
    <string name="share_tip">选择要分享到的平台</string>
    <string name="cancel_share">取消分享</string>
    <string name="notify">通知</string>
    <string name="mytag">我的标签</string>
    <string name="about_diary">关于厨房日记</string>
    <string name="exit_login">退出登录</string>
    <string name="re_voice">请直接说:食材、菜名</string>
    <string name="reply">反馈</string>
    <string name="oven_current_temperature">温度%d℃</string>
    <string name="web_refresh">请尝试下拉刷新</string>
    <string name="web_file_chooser">选择背景图片</string>
    <string name="picture_save">保存图片</string>
    <string name="dialog_waiting">请稍后...</string>
    <string name="web_load">与其他场合相比，餐桌上的时光最有趣</string>
    <string name="share_snapshoot_generating">请稍等哦,正在生成快照中...</string>
    <string name="share_snapshoot_failed">生成快照失败,请重试一下哦</string>
    <string name="share_success">分享成功</string>
    <string name="share_failed">分享失败</string>
    <string name="share_wechat">微信</string>
    <string name="share_wechat_circle">微信朋友圈</string>
    <string name="share_sina">新浪</string>
    <string name="share_snapshoot">日记快照</string>
    <string name="share_save_phone">保存至手机</string>
    <string name="share_content">（更多精彩美食？@厨房日记官博）</string>
    <string name="device_wifi_hint">输入手机所在Wi-Fi密码</string>
    <string name="device_wifi_tip">长按厨电上对应的配网键，直到Wi-Fi指示灯快闪，输入Wi-Fi密码，再点击APP搜索设备</string>
    <string name="device_adding">··· 设备等待添加 ···</string>
    <string name="device_add_wifi">添加Wi-Fi厨电</string>
    <string name="device_nearby">搜索附近设备</string>
    <string name="check_code">获取验证码</string>
    <string name="set_clear_cache">清除缓存</string>
</resources>