<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:paddingLeft="80px"
    android:paddingRight="80px"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_type_password"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <com.zhy.autolayout.AutoLinearLayout
        android:id="@+id/layout_pwd_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40px"
        android:background="@drawable/selector_bg_login_input"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_pwd_nation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/icon_nation_list"
            android:paddingLeft="16px"
            android:paddingRight="16px"
            android:singleLine="true"
            android:textColor="@color/text_gray"
            android:textSize="30px" />

        <EditText
            android:id="@+id/et_pwd_account"
            android:layout_width="0px"
            android:layout_height="80px"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/login_phone"
            android:padding="16px"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            android:textSize="28px" />

    </com.zhy.autolayout.AutoLinearLayout>

    <com.zhy.autolayout.AutoLinearLayout
        android:id="@+id/layout_pwd_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40px"
        android:background="@drawable/selector_bg_login_input"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/et_pwd_password"
            android:layout_width="0px"
            android:layout_height="80px"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/login_password_input"
            android:padding="16px"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            android:textSize="28px" />

        <CheckBox
            android:id="@+id/cb_pwd_password"
            android:layout_width="38px"
            android:layout_height="30px"
            android:layout_gravity="center_vertical"
            android:layout_margin="20px"
            android:background="@drawable/selector_password"
            android:button="@null" />

    </com.zhy.autolayout.AutoLinearLayout>


    <TextView
        android:id="@+id/tv_pwd_login"
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:layout_marginTop="40px"
        android:background="@drawable/login_btn_bg_selector"
        android:enabled="false"
        android:gravity="center"
        android:padding="20px"
        android:text="@string/login_btn"
        android:textColor="#ffffff"
        android:textSize="30px" />

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40px"
        android:paddingLeft="40px"
        android:paddingRight="40px"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_pressed_bg"
            android:text="@string/login_register"
            android:textColor="@color/white"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/tv_pwd_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/selector_pressed_bg"
            android:text="@string/login_forget"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </com.zhy.autolayout.AutoRelativeLayout>

</com.zhy.autolayout.AutoLinearLayout>