<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout android:id="@+id/layout_sliding"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    android:fitsSystemWindows="true"
    >

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/title_layout"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/divideLineColor"
            />

        <!--我的标签-->
        <TextView
            android:id="@+id/id_tv_setting_activity_mytag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30px"
            android:background="@drawable/selector_viewgroup_pressed_bg"
            android:padding="24px"
            android:text="@string/mytag"
            android:textColor="@color/text_gray"
            android:textSize="35px"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/divideLineColor"
            />

        <!--通知-->
        <TextView
            android:id="@+id/id_tv_setting_activity_notify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_viewgroup_pressed_bg"
            android:padding="24px"
            android:text="@string/notify"
            android:textColor="@color/text_gray"
            android:textSize="35px"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/divideLineColor"
            />

        <!--清除缓存-->
        <com.zhy.autolayout.AutoLinearLayout
            android:id="@+id/id_ll_setting_activity_clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_viewgroup_pressed_bg"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="24px"
                android:text="@string/set_clear_cache"
                android:textColor="@color/text_gray"
                android:textSize="35px"
                />

            <TextView
                android:id="@+id/id_tv_setting_activity_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16px"
                android:textColor="@color/text_gray"
                android:textSize="35px"
                />
        </com.zhy.autolayout.AutoLinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/divideLineColor"
            />

        <!--检查更新-->
        <com.zhy.autolayout.AutoLinearLayout
            android:id="@+id/id_ll_setting_activity_checkupdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_tv_pressed_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="24px"
                android:text="@string/check_update"
                android:textColor="@color/text_gray"
                android:textSize="35px"
                />

            <TextView
                android:id="@+id/id_tv_setting_activity_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10px"
                android:drawableRight="@drawable/back_right"
                android:gravity="center"
                android:text="1.0"
                android:textColor="@color/text_gray"
                android:textSize="35px"
                />
        </com.zhy.autolayout.AutoLinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/divideLineColor"
            />

        <!--关于-->
        <TextView
            android:id="@+id/id_tv_setting_activity_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_viewgroup_pressed_bg"
            android:padding="24px"
            android:text="@string/about_diary"
            android:textColor="@color/text_gray"
            android:textSize="35px"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/divideLineColor"
            />

        <TextView
            android:id="@+id/id_tv_setting_activity_reply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_viewgroup_pressed_bg"
            android:padding="24px"
            android:text="@string/reply"
            android:textColor="@color/text_gray"
            android:textSize="35px"
            />
        <!--退出登录-->
        <TextView
            android:id="@+id/id_tv_setting_activity_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30px"
            android:background="@drawable/selector_tv_pressed_bg"
            android:gravity="center"
            android:padding="24px"
            android:text="@string/exit_login"
            android:textColor="#ff0000"
            android:textSize="35px"
            />


    </com.zhy.autolayout.AutoLinearLayout>

    <include
        layout="@layout/network_dialog_view"
        android:layout_width="160dp"
        android:layout_height="140dp"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />

</com.zhy.autolayout.AutoRelativeLayout>