<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/layout_top"
        layout="@layout/title_layout" />

    <com.zhy.autolayout.AutoLinearLayout
        android:id="@+id/layout_register_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40px"
        android:layout_marginTop="200px"
        android:layout_marginRight="40px"
        android:layout_marginBottom="16px"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_register_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:padding="16px"
            android:text="@string/login_phone"
            android:textColor="@color/text_gray"
            android:textSize="28px"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_register_nation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/icon_nation_list"
            android:drawablePadding="4px"
            android:padding="16px"
            android:textColor="@color/text_gray"
            android:textSize="30px" />

        <EditText
            android:id="@+id/et_register_account"
            android:layout_width="302dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/login_phone"
            android:padding="16px"
            android:singleLine="true"
            android:textColorHint="@color/login_gray"
            android:textSize="28px" />

        <TextView
            android:id="@+id/et_register_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/read"
            android:textSize="10sp"
            android:padding="8px"
            android:visibility="gone" />

    </com.zhy.autolayout.AutoLinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/layout_register_phone"
        android:layout_marginLeft="40px"
        android:layout_marginRight="40px"
        android:background="@color/login_gray" />

    <com.zhy.autolayout.AutoLinearLayout
        android:id="@+id/layout_register_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_register_phone"
        android:layout_marginLeft="40px"
        android:layout_marginTop="16px"
        android:layout_marginRight="40px"
        android:layout_marginBottom="16px"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16px"
            android:text="@string/login_code"
            android:textColor="@color/text_gray"
            android:textSize="28px"
            android:visibility="gone" />

        <EditText
            android:id="@+id/et_register_code"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/login_code"
            android:inputType="number"
            android:padding="16px"
            android:singleLine="true"
            android:textColorHint="@color/login_gray"
            android:textSize="28px" />

        <TextView
            android:id="@+id/tv_register_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20px"
            android:background="@drawable/login_btn_square_bg_selector"
            android:gravity="center"
            android:minWidth="140px"
            android:padding="8dp"
            android:text="@string/check_code"
            android:textColor="#ffffff"
            android:textSize="28px" />

    </com.zhy.autolayout.AutoLinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/layout_register_code"
        android:layout_marginLeft="40px"
        android:layout_marginRight="40px"
        android:background="@color/login_gray" />

    <com.zhy.autolayout.AutoLinearLayout
        android:id="@+id/layout_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_register_code"
        android:layout_marginLeft="40px"
        android:layout_marginTop="16px"
        android:layout_marginRight="40px"
        android:layout_marginBottom="16px"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16px"
            android:text="@string/login_password"
            android:textColor="@color/text_gray"
            android:textSize="28px"
            android:visibility="gone" />

        <EditText
            android:id="@+id/et_register_password"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:digits="@string/password_digits"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:padding="16px"
            android:singleLine="true"
            android:textColorHint="@color/login_gray"
            android:textSize="28px" />

        <CheckBox
            android:id="@+id/cb_register_password"
            android:layout_width="41px"
            android:layout_height="26px"
            android:layout_gravity="center_vertical"
            android:layout_margin="20px"
            android:background="@drawable/selector_password"
            android:button="@null" />

    </com.zhy.autolayout.AutoLinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/layout_register_password"
        android:layout_marginLeft="40px"
        android:layout_marginRight="40px"
        android:background="@color/login_gray" />

    <TextView
        android:id="@+id/tv_register_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_register_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32px"
        android:text="@string/tip_policy"
        android:textColor="@color/text_black"
        android:textSize="26px" />


    <TextView
        android:id="@+id/tv_register_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_register_read"
        android:layout_marginLeft="40px"
        android:layout_marginTop="32px"
        android:layout_marginRight="40px"
        android:background="@drawable/login_btn_bg_selector"
        android:enabled="false"
        android:gravity="center"
        android:padding="20px"
        android:text="@string/login_submit"
        android:textColor="#ffffff"
        android:textSize="35px" />

</com.zhy.autolayout.AutoRelativeLayout>